third_party/move/move-compiler-v2/tests/checking/typing/binary_bit_or_invalid.exp

Diagnostics:
error: cannot use `bool` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
  ┌─ tests/checking/typing/binary_bit_or_invalid.move:8:9
  │
8 │         false | true;
  │         ^^^^^

error: cannot use `bool` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
  ┌─ tests/checking/typing/binary_bit_or_invalid.move:9:13
  │
9 │         1 | false;
  │             ^^^^^

error: cannot use `bool` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:10:9
   │
10 │         false | 1;
   │         ^^^^^

error: cannot use `address` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:11:9
   │
11 │         @0x0 | @0x1;
   │         ^^^^

error: cannot use `u128` with an operator which expects a value of type `u8`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:12:20
   │
12 │         (0: u8) | (1: u128);
   │                    ^

error: cannot use `R` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:13:9
   │
13 │         r | r;
   │         ^

error: cannot use `S` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:14:9
   │
14 │         s | s;
   │         ^

error: cannot use `bool` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:15:13
   │
15 │         1 | false | @0x0 | 0;
   │             ^^^^^

error: cannot use `address` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:15:21
   │
15 │         1 | false | @0x0 | 0;
   │                     ^^^^

error: cannot use `()` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:16:9
   │
16 │         () | ();
   │         ^^

error: cannot use `()` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:17:13
   │
17 │         1 | ();
   │             ^^

error: cannot use `(integer, integer)` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:18:9
   │
18 │         (0, 1) | (0, 1, 2);
   │         ^^^^^^

error: cannot use `(integer, integer)` with an operator which expects a value of type `u8|u16|u32|u64|u128|u256`
   ┌─ tests/checking/typing/binary_bit_or_invalid.move:19:9
   │
19 │         (1, 2) | (0, 1);
   │         ^^^^^^
